--- a/index.html
+++ b/index.html
@@ -16,10 +16,29 @@
 <body>
     <div id="fullpage">
         <div class="section section1">
+        <section class="first_page">
             <div class="slide slide1"> 
-            <img class="png-image" src="IMAGE/Vaporwave-Background-Gif-1920x1080-Spicesncurry.com.gif">  
-            <h1 class="slide1-text">Картиночки для души</h1>
+            <img class="png-image" src="IMAGE/Vaporwave-Background-Gif-1920x1080-Spicesncurry.com.gif">
+            <div class="header">
+                <h1 class="slide1-text">Картиночки павука</h1>
+                <img src="IMAGE/ef332c84759f5be69aec5f1b319f9bef.png" width="150px" height="100px">
+                <div class="menu">
+                    <div class="mikro-flex">
+                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="border"></p>
+                    </div>
+                    <div class="mikro-flex">
+                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="border"></p>
+                    </div>
+                    <div class="mikro-flex">
+                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="border"></p>
+                    </div>
+                </div>
+            </div>  
             </div>
+        </section>
 	        <div class="slide slide2">
                <!-- тут должны быть все картинки -->
             </div>
