--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <img src="IMAGE/ef332c84759f5be69aec5f1b319f9bef.png" width="150px" height="100px">
                 <div class="menu">
                     <div class="mikro-flex">
-                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="menu-text">•</p>
                         <p class="border"></p>
                     </div>
                     <div class="mikro-flex">
-                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="menu-text">•</p>
                         <p class="border"></p>
                     </div>
                     <div class="mikro-flex">
-                        <p class="menu-text">тут надо что то, но что я не знаю</p>
+                        <p class="menu-text">•</p>
                         <p class="border"></p>
                     </div>
                 </div>
